--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Registeration Page</title>
   </head>
   <body>
-    <form method="post" action="index.html" autocomplete="on">
+    <form method="post" action="mycontact.html" autocomplete="on">
 
       <label for="">Branch* : </label>
       <select name="branch" required>
